methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:44: error: value Yellow is not a member of java.awt.Color
  setBrushColor(c.Yellow);
                  ^